style: fix mermaid node label overflow

--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -537,3 +537,7 @@
 .ar-subtitle {
   color: $text-light;
 }
+
+.node .label{
+  font-weight: 400;
+}
